auth-service/manifest/02-oauth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-deployment
  namespace: meeting-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-service
  template:
    metadata:
      labels:
        app: oauth-service
    spec:
      containers:
        - name: oauth-service
          image: gk123a/meeting-oauth2-service:v1.0.1-prod
          command: ["/bin/sh", "-c"]
          args:
            - |
              touch .env && 
              java -jar app.jar
          ports:
            - containerPort: 9000
