auth-service/manifest/03-oauth-service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth-svc
  namespace: meeting-system
spec:
  selector:
    app: oauth-service
  ports:
    - port: 9000
      targetPort: 9000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth-ingress
  namespace: meeting-system
spec:
  ingressClassName: haproxy
  rules:
    - host: oauth-meeting.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth-svc
                port:
                  number: 9000
